--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ description: Otro blog sobre desarrollo de software
 
 # List of links in the navigation bar
 navbar-links:
+  English: "https://www.hardkoded.com/" 
   Conóceme: "es/aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
