--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: Otro blog sobre desarrollo de software
 # List of links in the navigation bar
 navbar-links:
   English: "https://www.hardkoded.com/" 
-  Conoceme: "es/aboutme"
+  Conoceme: "aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
